# triepack

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md
.github/: CONTRIBUTING.md
.github/workflows/: bindings.yml  ci.yml  coverage.yml  docs.yml  release.yml
bindings/: README.md
bindings/go/: README.md  bitstream.go  crc32.go  decoder.go  encoder.go  fixtures_test.go  go.mod  triepack.go  triepack_test.go  values.go  varint.go
bindings/java/: README.md  build.gradle  settings.gradle
bindings/java/src/main/java/com/deftio/triepack/: BitReader.java  BitWriter.java  Crc32.java  Decoder.java  Encoder.java  TpValue.java  TriePack.java  Values.java  VarInt.java
bindings/java/src/test/java/com/deftio/triepack/: FixturesTest.java  TriePackTest.java
bindings/javascript/: README.md  package-lock.json  package.json
bindings/javascript/src/: bitstream.js  crc32.js  decoder.js  encoder.js  index.js  values.js  varint.js
bindings/javascript/tests/: bitstream.test.js  crc32.test.js  fixtures.test.js  triepack.test.js  values.test.js  varint.test.js
bindings/kotlin/: README.md  build.gradle.kts
bindings/kotlin/src/main/kotlin/com/deftio/triepack/: BitStream.kt  Crc32.kt  Decoder.kt  Encoder.kt  TriePack.kt  Values.kt  VarInt.kt
bindings/kotlin/src/test/kotlin/com/deftio/triepack/: FixturesTest.kt  TriePackTest.kt
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/tests/: test_bitstream.py  test_crc32.py  test_fixtures.py  test_triepack.py  test_values.py  test_varint.py
bindings/python/triepack/: __init__.py  bitstream.py  crc32.py  decoder.py  encoder.py  values.py  varint.py
bindings/rust/: Cargo.toml  README.md
bindings/rust/src/: bitstream.rs  crc32.rs  decoder.rs  encoder.rs  lib.rs  values.rs  varint.rs
bindings/rust/tests/: integration_test.rs
bindings/swift/: Package.swift  README.md
bindings/swift/Sources/Triepack/: BitStream.swift  CRC32.swift  Decoder.swift  Encoder.swift  Triepack.swift  Values.swift  VarInt.swift
bindings/swift/Tests/TriepackTests/: TriepackTests.swift
bindings/typescript/: README.md  package.json  tsconfig.json
bindings/typescript/src/: index.ts
bindings/typescript/tests/: fixtures.test.ts  triepack.test.ts
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake
dev/: Lossless Data Compression Using Dict, LFSR, & PRLE.md  bitfile.h  txz-2002.md  txz-plus.md
dev/VBEDict/: VBEDict.doc  VBEDictNotes.txt
docs/: Doxyfile.in  _config.yml  builds.md  index.md  releases.md  triepack-technical-doc.md
docs/_includes/: custom-head.html  header.html
docs/assets/: main.scss  tabs.js
docs/assets/css/: style.scss
docs/guide/: api-reference.md  bitstream-guide.md  building.md  examples.md  getting-started.md  how-it-works.md  release-process.md  testing.md  tutorial.md
docs/internals/: architecture.md  bitstream-spec.md  format-spec.md
examples/: CMakeLists.txt  basic_encode_decode.c  compaction_benchmark.c  cpp_usage.cpp  json_complex.c  json_roundtrip.c  prefix_search.c  rom_lookup.c
examples/data/: sample_words.txt
include/triepack/: triepack.h  triepack_bitstream.h  triepack_common.h  triepack_json.h  triepack_version.h.in
plan/: bitstream-spec.md  fuzzy-match-notes.md  test-cases.md  txz-spec.md
src/bitstream/: CMakeLists.txt  bitstream.c  bitstream_internal.h  bitstream_read.c  bitstream_symbol.c  bitstream_varint.c  bitstream_write.c
src/core/: CMakeLists.txt  core_internal.h  decoder.c  encoder.c  header.c  integrity.c  suffix.c  value.c
src/json/: CMakeLists.txt  json_decode.c  json_dom.c  json_encode.c  json_internal.h
tests/: CMakeLists.txt  test_bitstream_bits.c  test_bitstream_bytes.c  test_bitstream_errors.c  test_bitstream_rom.c  test_bitstream_symbol.c  test_bitstream_varint.c  test_core_edge_cases.c  test_core_integrity.c  test_core_internal.c  test_core_lookup.c  test_core_roundtrip.c  test_core_values.c  test_cross_language.c  test_json_decode.c  test_json_dom.c  test_json_edge_cases.c  test_json_roundtrip.c  test_wrapper_bitstream.cpp  test_wrapper_core.cpp  test_wrapper_json.cpp
tests/data/: benchmark_100k.json  common_words_10k.txt
tests/fixtures/: empty.trp  keys_only.trp  large.trp  multi_mixed.trp  shared_prefix.trp  single_int.trp  single_null.trp
tools/: CMakeLists.txt  check-coverage.sh  generate_benchmark_json.py  generate_fixtures.c  run_benchmarks.c  trp_inspect.c
wrapper/: CMakeLists.txt
wrapper/include/triepack/: bitstream.hpp  json.hpp  triepack.hpp
wrapper/src/: bitstream_wrapper.cpp  json_wrapper.cpp  triepack_wrapper.cpp
